--- a/mysite/static/css/style.css
+++ b/mysite/static/css/style.css
@@ -90,6 +90,25 @@ li a{
 .check{
     border: solid 5px #c9e265;
 }
+#nextlevel{
+    display: none; 
+    background-color:#f3f7fb; 
+    border-radius: 3px; 
+    position: absolute; 
+    top: 180px; 
+    left: 29px; 
+    right: 32px; 
+    padding: 5px;
+}
+#btmsuivant{
+    width: 80%;
+    background-color: #0B3C49; 
+    color: #f3f7fb ; 
+    padding:5px;
+}
+.textegagner{
+    color: #0B3C49;
+}
 /********** card-footer ***********/
 .card-footer{
     background: #f3f7fb;
