--- a/mysite/static/css/style.css
+++ b/mysite/static/css/style.css
@@ -81,7 +81,7 @@ li a{
     font-family: 'Quicksand', sans-serif;
     text-transform: uppercase;
 }
-#detimg {
+.detimg {
     margin: 2% 2% 2% 2%;
 }
 #painting{
@@ -113,7 +113,7 @@ li a{
 .card-footer{
     background: #f3f7fb;
 }
-#carde{
+.carde{
     display: inline;
     margin : 2% 2% 2% 2% ;
 }
