--- a/game/templates/game/form_user.html
+++ b/game/templates/game/form_user.html
@@ -15,6 +15,8 @@
                     {% csrf_token %}
                     <div class="form-group">
                         <label for="pseudo" id="lblpseud">Pseudo</label>
+                        
+                        <p class="connexion-error">{% if error %}{{error}}{% endif %}</p>
                         <input id="pseudo" type="text" class="form-control"  placeholder="Pseudo" name="pseudo">
                     </div>
                     <!-- <a id="btmpseudo" style="width: 50%;background-color: #f3f7fb; color: #0B3C49;"href="{% url 'game:show' id=1 %}"  class="btn btn btn-lg" role="button" aria-pressed="true">JOUER</a> -->
