--- a/mysite/static/css/style.css
+++ b/mysite/static/css/style.css
@@ -50,6 +50,12 @@ li a{
 /********************* le fichier level ******************************/
 
 /********** card-header *************/
+div.col-md-4{
+    padding-right: 0px;
+    padding-left: 0px;
+    padding-bottom: 0px;
+    padding-top: 0px;
+}
 .card-header{
     font-size: 20px;
 }
