--- a/mysite/templates/layouts/_nav.html
+++ b/mysite/templates/layouts/_nav.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <nav class="navbar navbar-expand-lg navbar-dark" id="nabvarr">
     <a class="navbar-brand" href="#">Bacchanight</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,13 +9,13 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item active">
-            <a href="{% url 'home' %}"><li>Home</li></a>
+            <a class="togle"  href="{% url 'home' %}"><li>Home</li></a>
         </li>
         <li class="nav-item">
-            <a href="{% url 'game:index' %}"><li>Game</li></a>
+            <a class="togle"  href="{% url 'game:index' %}"><li>Game</li></a>
         </li>
         <li class="nav-item">
-            <a href="{% url 'contact' %}"><li>Contact</li></a>
+            <a class="togle"  href="{% url 'contact' %}"><li>Contact</li></a>
         </li>
       </ul>
     </div>
