--- a/game/templates/game/level.html
+++ b/game/templates/game/level.html
@@ -3,11 +3,27 @@
 
 {% block script %}
 <script type="text/javascript">
-    ////////////TO DO : récupérer progression du joueur /////////////
     var tab = [];
-    {% for d in detail %}
-        tab.push({x : {{d.position_x}}, y : {{d.position_y}}, height: {{d.height}}, width: {{d.width}}, checked : false});
-    {% endfor %}
+    document.addEventListener("DOMContentLoaded", function(event) { 
+        var details = [], i = 0;
+
+        details[0] = "{{player.detail1}}" == "True" ? true : false;  
+        details[1] = "{{player.detail2}}" == "True" ? true : false;  
+        details[2] = "{{player.detail3}}" == "True" ? true : false;  
+        details[3] = "{{player.detail4}}" == "True" ? true : false;  
+        details[4] = "{{player.detail5}}" == "True" ? true : false;   
+
+        {% for d in detail %}
+            tab.push({x : {{d.position_x}}, y : {{d.position_y}}, height: {{d.height}}, width: {{d.width}}, checked : details[i] });
+            i += 1;
+        {% endfor %}
+        for (let i = 0; i < 5; i++) {
+            if (tab[i].checked == true) {
+                $('.details div:nth-child(' + (i + 1) + ') img').addClass("check");
+            }  
+        }
+    });
+   
 </script> 
  <script src="{% static 'javascript/script.js' %}"></script>
 {% endblock %}
@@ -23,8 +39,7 @@
             <div class="col-md-4">
                 <div class="card">
                     <div id="nav" class="card-header" >
-                            <!-- ////////////TO DO : récupérer nombre d'étoile ///////////// -->
-                            <h3 id="nombre" >0</h3>
+                            <h3 id="nombre" >{{player.nb_stars}}</h3>
                             <i id="etoile" class="fas fa-star" ></i>
                             <i id="question"class="far fa-question-circle" onclick="OpenNoCluePopUp()"></i>
                             <i id="indice" onclick="openPopUpClue()"  class="fas fa-lightbulb"></i>
