--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -25,15 +25,11 @@
             <div class="col-md-4"></div>
             <div class="col-md-4 text-center">
                 <img src="{% static 'images/header/header_image.png' %}">
-<<<<<<< HEAD
+
                 <h3 class="namegame" >Trouve moi !</h3>
-                <a href="{% url 'game:form_user' %}" id="btmjouer" class="btn btn btn-lg" role="button" aria-pressed="true">JOUER</a></br></br>
-                <a href="#" id="btmcontinuer" class="btn btn btn-lg" role="button" aria-pressed="true">CONTINUER</a>
-=======
-                <h3 style="color: #f3f7fb; font-family: 'Quicksand', sans-serif; margin-bottom: 30%;" >Trouve moi !</h3>
-                <a style="width: 50%;" href="{% url 'game:form_user_start' %}" id="btmjouer" class="btn btn btn-lg" role="button" aria-pressed="true">JOUER</a></br></br>
-                <a style="width: 50%;"href="{% url 'game:form_user_continue' %}" id="btmcontinuer" class="btn btn btn-lg" role="button" aria-pressed="true">CONTINUER</a>
->>>>>>> f44356c955feb7e632dbf12609c92927e0633cdc
+                <a href="{% url 'game:form_user_start' %}" id="btmjouer" class="btn btn btn-lg" role="button" aria-pressed="true">JOUER</a></br></br>
+                <a href="{% url 'game:form_user_continue' %}" id="btmcontinuer" class="btn btn btn-lg" role="button" aria-pressed="true">CONTINUER</a>
+
             </div>
             <div class="col-md-4"></div>
         </div>
