--- a/game/templates/game/level.html
+++ b/game/templates/game/level.html
@@ -3,6 +3,7 @@
 
 {% block script %}
 <script type="text/javascript">
+    // mise en place du tableau qui récupère toutes les infos sur les détails
     var tab = [];
     document.addEventListener("DOMContentLoaded", function(event) { 
         var details = [], i = 0;
