--- a/game/templates/game/level.html
+++ b/game/templates/game/level.html
@@ -3,6 +3,9 @@
 
 {% block script %}
 <script type="text/javascript">
+    // mise en place de la variable qui contient le nombre de click restant
+    var click = {{player.time}} ;
+    
     // mise en place du tableau qui récupère toutes les infos sur les détails
     var tab = [];
     document.addEventListener("DOMContentLoaded", function(event) {
