--- a/game/templates/game/level.html
+++ b/game/templates/game/level.html
@@ -4,7 +4,7 @@
 {% block script %}
 <script type="text/javascript">
     // mise en place de la variable qui contient le nombre de click restant
-    var click = {{player.time}} ;
+    var click = {{player.currentClick}} ;
     
     // mise en place du tableau qui récupère toutes les infos sur les détails
     var tab = [];
@@ -50,7 +50,7 @@
     </div>
     <div class="main">
       <div class="main-title">
-          <h3 class="title">{{level.name}}</h3>
+          <h3 class="title" id="level_top_title">{{level.name}}</h3>
       </div>
       <div class="main-image">
           <img class="painting" src="{% static 'images/' %}{{level.image}}" onclick="check(event)">
