enregistrement des details dans la bdd

--- a/game/templates/game/level.html
+++ b/game/templates/game/level.html
@@ -23,7 +23,7 @@
         {% endfor %}
         for (let i = 0; i < 5; i++) {
             if (tab[i].checked == true) {
-                $('.details div:nth-child(' + (i + 1) + ') img').addClass("check");
+              $('.footer .detail-image:nth-child('+ (i + 1) +')').addClass('check');
             }
         }
         //////// TODO : ajouter portrait ou paysage  ///////
