marge droite + sauvegarde nb click

--- a/game/templates/game/level.html
+++ b/game/templates/game/level.html
@@ -53,6 +53,9 @@
           <h3 class="title" id="level_top_title">{{level.name}}</h3>
       </div>
       <div class="main-image">
+          <div class="timer hide">
+            <p></p>
+          </div>
           <img class="painting" src="{% static 'images/' %}{{level.image}}" onclick="check(event)">
       </div>
     </div>
