--- a/mysite/static/css/style.css
+++ b/mysite/static/css/style.css
@@ -77,7 +77,7 @@ li a{
 
 .game_body {
   height: 100vh;
-  width: 100 vw;
+  width: 100vw;
   position :absolute;
 }
 .nav {
@@ -246,7 +246,18 @@ li a{
     border: solid 0.75rem #c9e265;
 }
 
+.timer {
+  position: absolute;
+  background: white;
+  height: 50vh;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+}
 
+.timer p {
+  font-size: 3rem;
+}
 
 
 
