--- a/game/templates/game/level.html
+++ b/game/templates/game/level.html
@@ -84,7 +84,22 @@
       <i class="fas fa-times hide-button" onclick="popUp('.help')"></i>
       <div class="help-content">
         <h3>Règle du jeu<h3>
-        <p> Message d'aide<p>
+        <p> Je suis caché dans un des tableaux du musée. Pour me trouver, tu devras passer tous les niveaux . Cherche 
+        sur chaque tableau, les cinq morceaux proposés, en cliquant dessus. Si tu es au musée, active le mode visite. Après
+        cinq niveaux, tu plongeras dans un nouveau monde artistique du musée. Tu devras changer de salle si tu y es. </p>
+        
+        
+        <p>Si tu est bloqué, clique sur <i class="fas fa-lightbulb"></i> pour avoir des indices. Tu les payeras avec les étoiles que tu auras 
+        récupéré chaque fois que tu retrouves un morceau.</p>
+        
+        <!-- Mettre un démo -->
+        <img id="painting" src="mysite/static/images/w1level1.jpg">
+        
+        <p> <i class="fas fa-exclamation-triangle" ></i> Attention, au bout de trop de clics consécutifs, tu seras
+        bloqué pendant un certain temps </p>
+        
+        <p> <i class="fa fa-toggle-on" aria-hidden="true"></i> Mode visite</p>
+        
       </div>
     </div>
   </div>
