--- a/game/templates/game/level.html
+++ b/game/templates/game/level.html
@@ -40,17 +40,17 @@
   <div class="game_body">
     <div class="nav">
       <div class="nav-star">
-        <p>{{player.nb_stars}}</p>
-        <i class="fas fa-star" ></i>
+        <h3 class="title">{{player.nb_stars}}</h3>
+        <i class="fas fa-star icon" ></i>
       </div>
 
-      <h3 class="nav-title">{{level.world.name}}</h3>
-      <i class="far fa-question-circle" onclick="popUp('.help')"></i>
-      <i onclick="popUp('.clues'); checkClues()"  class="fas fa-lightbulb"></i>
+      <h3 class="nav-title title">{{level.world.name}}</h3>
+      <i class="far fa-question-circle icon" onclick="popUp('.help')"></i>
+      <i onclick="popUp('.clues'); checkClues()"  class="fas fa-lightbulb icon"></i>
     </div>
     <div class="main">
       <div class="main-title">
-          <h3 class="title" id="level_top_title">{{level.name}}</h3>
+          <h3 class="title">{{level.name}}</h3>
       </div>
       <div class="main-image">
           <div class="timer hide">
@@ -65,7 +65,7 @@
       {% endfor %}
     </div>
     <div class="clues hide popup">
-      <i class="fas fa-angle-up hide-button" onclick="popUp('.clues')"></i>
+      <i class="fas fa-angle-up hide-button icon" onclick="popUp('.clues')"></i>
       <p class="title">Indices</p>
       <div class="details">
         {% for d in detail %}
@@ -81,10 +81,17 @@
         <a href="{% url 'game:next_level' %}">Niveau suivant</a>
     </div>
     <div class="help hide">
-      <i class="fas fa-times hide-button" onclick="popUp('.help')"></i>
+      <i class="fas fa-times hide-button icon" onclick="popUp('.help')"></i>
       <div class="help-content">
         <h3>Règle du jeu<h3>
         <p> Message d'aide<p>
+        <div>
+          <p>Mode visite</p>
+          <div class="onoffswitch">
+            <input type="checkbox" name="visiteMode" class="onoffswitch-checkbox" id="visitButton" onclick="setVisitMode()">
+            <label class="onoffswitch-label" for="visitButton"></label>
+          </div>
+        </div>
       </div>
     </div>
   </div>
