--- a/mysite/static/css/style.css
+++ b/mysite/static/css/style.css
@@ -228,6 +228,11 @@ li a{
 
 .help-content {
   padding : 5vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 95vh;
 }
 
 .check{
@@ -279,8 +284,24 @@ li a{
   }
 }
 
+.text {
+  font-size: x-large;
+  text-align: center;
+}
 
 /****************   mode visite    ******************************/
+
+.visitMode {
+  display: flex;
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+}
+
+.visitMode p {
+  width : 15vw;
+}
+
 
 .onoffswitch {
     position: relative; width: 60px;
@@ -304,6 +325,7 @@ li a{
     right: 22px;
     border: 2px solid #E3E3E3; border-radius: 36px;
     transition: all 0.3s ease-in 0s;
+    height: 36px;
 }
 .onoffswitch-checkbox:checked + .onoffswitch-label {
     background-color: #49E845;
