nettoyage pages + html

--- a/game/templates/game/form_user.html
+++ b/game/templates/game/form_user.html
@@ -3,35 +3,19 @@
 {% block title %}Formulaire Utilisateur{% endblock %}
 
 {% block body %}
-{% include 'layouts/_nav.html' %}
-<body class="bodyindex">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4"></div>
-            <div id="context" class="col-md-4 text-center">
-                <img src="{% static 'images/header/header_image.png' %}">
-                <h3 class="namegame" >Trouve moi !</h3>
-                <form action="{% if start %}{{start}}{% elif continue %}{{continue}}{% endif %}" method="POST">
-
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <label for="pseudo" id="lblpseud">Pseudo</label>
-                        <p class="connexion-error">{% if error %}{{error}}{% endif %}</p>
-                        <input id="pseudo" type="text" class="form-control"  placeholder="Pseudo" name="pseudo">
-                    </div>
-                    {% if start %}
-                        <input type="submit" value="Jouer" tyle="width: 50%;background-color: #f3f7fb; color: #0B3C49;">
-                    {% elif continue %}
-                        <input type="submit" value="Continuer" tyle="width: 50%;background-color: #f3f7fb; color: #0B3C49;">
-                    {% endif %}
-                    </form>
-
-            </div>
-            <div class="col-md-4"></div>
-        </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
+<div class="simple-body">
+  <img src="{% static 'images/header/header_image.png' %}">
+  <h3>Trouve moi !</h3>
+  <form action="{% if start %}{{start}}{% elif continue %}{{continue}}{% endif %}" method="POST" class="button-group">
+      {% csrf_token %}
+      <label for="pseudo" class="title">Pseudo</label>
+      <p class="connexion-error">{% if error %}{{error}}{% endif %}</p>
+      <input id="pseudo" type="text" placeholder="Pseudo" name="pseudo">
+      {% if start %}
+          <input type="submit" value="Jouer" class="button button-light">
+      {% elif continue %}
+          <input type="submit" value="Continuer" class="button button-light">
+      {% endif %}
+      </form>
+</div>
 {% endblock %}
