--- a/game/templates/game/level.html
+++ b/game/templates/game/level.html
@@ -103,7 +103,7 @@
         récupéré chaque fois que tu retrouves un morceau.</p>
 
         <!-- Mettre un démo -->
-        <img id="painting" src="{% static 'images/w1level1.jpg' %}">
+        <img class="painting" src="{% static 'images/demo1.png' %}">
         <p class="text"> <i class="fas fa-exclamation-triangle" ></i> Attention, au bout de trop de clics consécutifs, tu seras
         bloqué pendant un certain temps </p>
       </div>
