--- a/mysite/static/css/style.css
+++ b/mysite/static/css/style.css
@@ -3,6 +3,18 @@
     font-family: 'Quicksand', sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+body {
+  margin : 0px;
+}
+
 
 /**************************** home page + formulaire ****************************/
 
